--- a/configs/paths.yaml
+++ b/configs/paths.yaml
@@ -10,6 +10,7 @@ data_paths:
   raw_data_path: data/raw/weatherAUS.csv
   xg_processed_data_path: data\processed\xg_weatherAUS_processed.csv
   cleaned_data_path: data/cleaned/cleaned_data.csv
+  test_data_path: data\processed\test_dataset.csv
 
 artifacts_paths:
   xg_model_path: models/xgboost_model.pkl
